{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 97,
  "lineage": "b44b2087-1e17-531d-f87d-d94199ececdd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039350f4cd48ead15",
            "arn": "arn:aws:ec2:ap-south-1:679631209833:elastic-ip/eipalloc-039350f4cd48ead15",
            "association_id": "eipassoc-012e74a53665a13a6",
            "domain": "vpc",
            "id": "eipalloc-039350f4cd48ead15",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0ea1c1663bc9103b4",
            "private_dns": "ip-10-0-1-130.ap-south-1.compute.internal",
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-43-204-194-140.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.194.140",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-nat-eip"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "eipalloc-039350f4cd48ead15",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:internet-gateway/igw-03eeb62def77de699",
            "id": "igw-03eeb62def77de699",
            "owner_id": "679631209833",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-igw"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-igw"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "igw-03eeb62def77de699",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:loadbalancer/app/prakash-ror-final-alb/e21067ee8d1fdb47",
            "arn_suffix": "app/prakash-ror-final-alb/e21067ee8d1fdb47",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prakash-ror-final-alb-1242087577.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:loadbalancer/app/prakash-ror-final-alb/e21067ee8d1fdb47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prakash-ror-final-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-009e69c738c37b8cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a5150209eabf18f"
              },
              {
                "subnet_id": "subnet-0362f60bf8f4e174b"
              }
            ],
            "subnets": [
              "subnet-00a5150209eabf18f",
              "subnet-0362f60bf8f4e174b"
            ],
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-alb"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-alb"
            },
            "vpc_id": "vpc-0dc273455f784e418",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:loadbalancer/app/prakash-ror-final-alb/e21067ee8d1fdb47"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:listener/app/prakash-ror-final-alb/e21067ee8d1fdb47/352ebf78e9daf3a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:targetgroup/prakash-ror-final-tg/1690360aeefcaf03",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:listener/app/prakash-ror-final-alb/e21067ee8d1fdb47/352ebf78e9daf3a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:loadbalancer/app/prakash-ror-final-alb/e21067ee8d1fdb47",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:listener/app/prakash-ror-final-alb/e21067ee8d1fdb47/352ebf78e9daf3a7"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:targetgroup/prakash-ror-final-tg/1690360aeefcaf03",
            "arn_suffix": "targetgroup/prakash-ror-final-tg/1690360aeefcaf03",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:targetgroup/prakash-ror-final-tg/1690360aeefcaf03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:679631209833:loadbalancer/app/prakash-ror-final-alb/e21067ee8d1fdb47"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prakash-ror-final-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-tg"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:679631209833:targetgroup/prakash-ror-final-tg/1690360aeefcaf03"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039350f4cd48ead15",
            "association_id": "eipassoc-012e74a53665a13a6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05dd882b7d1f237e1",
            "network_interface_id": "eni-0ea1c1663bc9103b4",
            "private_ip": "10.0.1.130",
            "public_ip": "43.204.194.140",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0362f60bf8f4e174b",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-nat-gateway"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-nat-gateway"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "nat-05dd882b7d1f237e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:route-table/rtb-0a2f725c4ad65280c",
            "id": "rtb-0a2f725c4ad65280c",
            "owner_id": "679631209833",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05dd882b7d1f237e1",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-private-rt"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtb-0a2f725c4ad65280c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:route-table/rtb-05a19fdedc99e3f78",
            "id": "rtb-05a19fdedc99e3f78",
            "owner_id": "679631209833",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03eeb62def77de699",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-public-rt"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtb-05a19fdedc99e3f78",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d943a9b2fe73604",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a2f725c4ad65280c",
            "subnet_id": "subnet-0ce9d77cb0d6a6c30"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtbassoc-08d943a9b2fe73604",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051694dde0390b343",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a2f725c4ad65280c",
            "subnet_id": "subnet-03685de1be3974d96"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtbassoc-051694dde0390b343",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f252f1ca561637e5",
            "region": "ap-south-1",
            "route_table_id": "rtb-05a19fdedc99e3f78",
            "subnet_id": "subnet-0362f60bf8f4e174b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtbassoc-0f252f1ca561637e5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae71b0a6a2465d3a",
            "region": "ap-south-1",
            "route_table_id": "rtb-05a19fdedc99e3f78",
            "subnet_id": "subnet-00a5150209eabf18f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "rtbassoc-0ae71b0a6a2465d3a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:security-group/sg-009e69c738c37b8cd",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009e69c738c37b8cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prakash-ror-finaltask-ecommerce-alb-sg",
            "name_prefix": "",
            "owner_id": "679631209833",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-alb-sg"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "sg-009e69c738c37b8cd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:security-group/sg-0659d4e307b7cce91",
            "description": "ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0659d4e307b7cce91",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to ECS",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-009e69c738c37b8cd"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "prakash-ror-finaltask-ecommerce-ecs-sg",
            "name_prefix": "",
            "owner_id": "679631209833",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-ecs-sg"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "sg-0659d4e307b7cce91",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:security-group/sg-03ddaf4c3813ca0d7",
            "description": "RDS MySQL security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ddaf4c3813ca0d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0659d4e307b7cce91"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prakash-ror-finaltask-ecommerce-rds-sg",
            "name_prefix": "",
            "owner_id": "679631209833",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-rds-sg"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "sg-03ddaf4c3813ca0d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:subnet/subnet-0ce9d77cb0d6a6c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce9d77cb0d6a6c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679631209833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-private-subnet-1"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-private-subnet-1"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "subnet-0ce9d77cb0d6a6c30",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:subnet/subnet-03685de1be3974d96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03685de1be3974d96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "679631209833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-private-subnet-2"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-private-subnet-2"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "subnet-03685de1be3974d96",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:subnet/subnet-0362f60bf8f4e174b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0362f60bf8f4e174b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679631209833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-public-subnet-1"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-public-subnet-1"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "subnet-0362f60bf8f4e174b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:subnet/subnet-00a5150209eabf18f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a5150209eabf18f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679631209833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-public-subnet-2"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-public-subnet-2"
            },
            "vpc_id": "vpc-0dc273455f784e418"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "subnet-00a5150209eabf18f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:679631209833:vpc/vpc-0dc273455f784e418",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0541ba2f1382e0ed3",
            "default_route_table_id": "rtb-0416fc94703336f85",
            "default_security_group_id": "sg-020a6fce0b7eab73e",
            "dhcp_options_id": "dopt-0d2062c515cbbac89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc273455f784e418",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0416fc94703336f85",
            "owner_id": "679631209833",
            "region": "ap-south-1",
            "tags": {
              "Name": "prakash-ror-finaltask-ecommerce-vpc"
            },
            "tags_all": {
              "Name": "prakash-ror-finaltask-ecommerce-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "679631209833",
            "id": "vpc-0dc273455f784e418",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}